# spbuProgHomeworksSem1

./: .gitignore  README.md  printCode.sh
10HW_16.11.21/States/: CMakeLists.txt  file.txt  sortedList.h  sortedListTests.h  statesTests.h  testFile.txt
12HW_07.12.21/CommentLexer/: CMakeLists.txt
2HW_14.09.21/BubbleAndCountingSorts/: BubbleAndCountingSorts.c  BubbleAndCountingSorts.vcxproj.filters
2HW_14.09.21/Exponentiation/: Exponentiation.c  Exponentiation.sln  Exponentiation.vcxproj.filters
2HW_14.09.21/Fibonacci/: Fibonacci.sln  Fibonacci.vcxproj
2HW_14.09.21/HalfQSort/: HalfQSort.vcxproj  HalfQSort.vcxproj.filters
3HW_21.09.21/SmartQSort/: SmartQSort.vcxproj  SmartQSort.vcxproj.filters
3HW_21.09.21/Trend/: Trend.c
4HW_28.09.21/BinaryRepresentation/: BinaryRepresentation.c  BinaryRepresentation.vcxproj.filters
4HW_28.09.21/ModulesAndFiles/: ModulesAndFiles.vcxproj  ModulesAndFiles.vcxproj.filters  WorkWithArrays.h  input.txt  myQSort.h  testMyQSort.h  trash.txt
5HW_12.10.21/AdvancedBracketBalance/: CMakeLists.txt  advancedBracketBalance.c  advancedBracketBalanceTests.h
5HW_12.10.21/PostfixCalculator/: postfixCalculator.h  postfixCalculatorTests.h
5HW_12.10.21/SortingStationAlgorithm/: sortingStationAlgorithm.h  sortingStationAlgorithmTests.c
5HW_12.10.21/Stack/: main.c  stackTests.h
6HW_19.10.21/MergeSort/: list.h  mergeSortingTests.h
6HW_19.10.21/SortedList/: main.c
7HW_26.10.21/ParseTree/: CMakeLists.txt  file.txt  parseTree.c  parseTree.h  parseTreeTests.c  test1.txt
7HW_26.10.21/SearchTree/: main.c  searchTree.h
9HW_09.11.21/HashTable/: hashTableTests.c
Control1.4/: input.txt
Control1.4Task3/: CMakeLists.txt  main.c  output.txt
Control2.2/Task2/: CMakeLists.txt  main.c
Control2.3/Task1/: CMakeLists.txt  list.h  listTests.c  main.c
Control2/Task3/: Task3.sln
Control23.11.21/Task1/: CMakeLists.txt  list.c  listTests.c  listTests.h  main.c
Control2V2/Task2/: main.c
FifthHomework12.10.21/AdvancedBracketBalance/: CMakeLists.txt  advancedBracketBalance.c  advancedBracketBalance.h  advancedBracketBalanceTests.c  advancedBracketBalanceTests.h  main.c
FifthHomework12.10.21/PostfixCalculator/: CMakeLists.txt  main.c  postfixCalculator.c  postfixCalculator.h  postfixCalculatorTests.c
FifthHomework12.10.21/SortingStation/: CMakeLists.txt  sortingStationAlgorithm.c  sortingStationAlgorithm.h
FifthHomework12.10.21/SortingStationAlgorithm/: CMakeLists.txt  main.c  sortingStationAlgorithm.c  sortingStationAlgorithm.h  sortingStationAlgorithmTests.c  sortingStationAlgorithmTests.h
Task2/: main.c
(+198 files in other folders)
